2008-01-20  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-directory.cc: Enable test_setup_env2 test.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* test/testmain.cc: Include config.h.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Remove hard-coded enableval defaults.  These
	appear to break with current autoconf.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-directory.cc: Ensure mount_location and
	CHROOT_MOUNT_LOCATION are set correctly.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-directory.cc: New file.  Tests for
	chroot_directory.  Note: one test is broken; probably a testsuite
	issue--it works fine in practice.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-environment.cc
	(environment::add): Log debugging message on insert.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-mount/schroot-mount-main.cc: Mount messages go to
	log_debug() rather than std::cout (which breaks session name
	output to stdout).

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/05file: Use "true" rather than 1 in session
	flag tests, now correctly output as bool, not int.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.cc
	(chroot::setup_env): Cast session flag masks to bool.

2008-01-20  Roger Leigh  <rleigh@debian.org>

	* test/test-sbuild-chroot.h: Print environment variable names on
	error.

	* test/sbuild-chroot*.cc: Update environment and session flags
	checks.

2008-01-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/20copyfiles
	(copy_file): Add checks that source and destination both exist.

	* bin/schroot/Makefile.am
	(pkgsysconf_DATA): Add copyfiles-defaults.

2008-01-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-setup.5.in: Replace 20network and 30passwd
	with 20copyfiles.

	* bin/schroot/setup/Makefile.am
	(setup_SCRIPTS): Remove 20network and 30passwd, and add
	20copyfiles.
