@@ -1,5 +1,10 @@
 2008-01-20  Roger Leigh  <rleigh@debian.org>
 
+	* test/sbuild-dirstream.cc (class test_dirstream): Remove
+	special-case for building in SVN repository.
+
+2008-01-20  Roger Leigh  <rleigh@debian.org>
+
 	* test/sbuild-chroot-directory.cc: Enable test_setup_env2 test.
 
 2008-01-20  Roger Leigh  <rleigh@debian.org>
